# lorem_ipsum_gen_wasm

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
